--- a/src/app/agent-service/account/account.component.html
+++ b/src/app/agent-service/account/account.component.html
@@ -164,8 +164,8 @@
 </div>
 
 <!-- Modal de changement de mot de passe -->
-<div *ngIf="isModalOpen" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
-  <div class="bg-white p-6 rounded-lg w-full max-w-md">
+<div *ngIf="isModalOpen" class="fixed inset-0 z-50 flex justify-center items-center bg-gray-500/50">
+  <div class="bg-white rounded-lg p-6 shadow-lg max-w-md w-full mx-4">
     <h3 class="text-lg font-semibold text-teal-800 mb-4">Changer le mot de passe</h3>
     
     <div class="space-y-4">
